# WaybackMachineDownloaderCompanion

./: .gitignore  CHANGELOG.md  INSTALL.md  README.md  pyproject.toml
src/wayback_machine_downloader_companion/: __init__.py  _cli.py  cli_download.py  cli_find.py  cli_launcher.py  cli_merge.py  config.py  downloader.py  finder.py  html_parser.py  logging_utils.py  logreset.py  merger.py
tests/: conftest.py  test_cli_launcher.py  test_config.py  test_downloader.py  test_finder.py  test_html_parser.py  test_merger.py
