[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wayback-machine-downloader-companion"
version = "0.2.0"
description = "Companion CLI tools for hartator/wayback-machine-downloader: find missing resources, download them, and merge snapshot folders."
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
authors = [{ name = "Luraminaki" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/Luraminaki/WaybackMachineDownloaderCompanion"

[project.optional-dependencies]
dev = ["ruff>=0.6", "basedpyright>=1.18", "pytest>=8.0"]

[project.scripts]
wmdc = "wayback_machine_downloader_companion.cli_launcher:cli"
wmdc-merge = "wayback_machine_downloader_companion.cli_merge:cli"
wmdc-find = "wayback_machine_downloader_companion.cli_find:cli"
wmdc-download = "wayback_machine_downloader_companion.cli_download:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/wayback_machine_downloader_companion"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "PL", "N", "SIM", "RUF", "D"]
ignore = [
    "D203", # incompatible with D211 (no-blank-line-before-class)
    "D213", # incompatible with D212 (multi-line-summary-first-line)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "PLR2004"]

[tool.basedpyright]
include = ["src", "tests"]
pythonVersion = "3.10"
typeCheckingMode = "standard"

[tool.pytest.ini_options]
testpaths = ["tests"]
